test: add test for deleteMovieHandler, also trying to solve issue with duplicate metric creation when testing with real routes cicd: delete version(depricated) swagger: some minor documentation changes
